header+div_last

--- a/css/style.css
+++ b/css/style.css
@@ -205,17 +205,16 @@ main .banner .container a{
 
 
 
-
-
-main .categories{
+.categories .container_2{
     margin-bottom: 94px;
     min-height: 1370px;
-}
-main .categories .container{
+    max-width: 1200px;
     display: flex;
     justify-content: space-between;
+
 }
-main .categories .left_container{
+.categories .left_container{
+    margin-right: 48px;
     display: flex;
     flex-direction: column;
 
@@ -223,14 +222,60 @@ main .categories .left_container{
     min-height: 1370px;
     background: #fbfbfb;
 }
-.categories .left_container article{
-    min-height: 360px;
-    max-width: 310px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+.left_container h2{
+    font-family: 'cera_probold', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 89%;
+    color: #3d3d3d;
+    display: inline-block;
+}
+.left_container h2:first-of-type{
+    margin-top: 14px;
+    margin-left: 18px;
+    margin-bottom: 7px;
 
 }
+.link_list{
+    margin-left: 30px;
+    margin-bottom: 36px;
+    min-height: 360px;
+    min-width: 92px;
+    display: flex;
+}
+.link_list ul{
+        list-style: none;
+    text-decoration: none;
+}
+
+.link_list a{
+    font-family: 'cera_proregular', sans-serif;
+    display: inline-block;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 267%;
+    color: #3d3d3d;
+}
+.link_list a:hover:after{
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 267%;
+    color: #46a358;
+}
+
+.left_container h2:last-of-type{
+
+}
+
+.link_list img{
+    display: inline-block;
+}
+.numbers{
+    min-height: 360px;
+    width: 28px;
+    display: flex;
+}
+
 
 
 .categories .products{
@@ -239,27 +284,110 @@ main .categories .left_container{
     display: flex;
     flex-direction: column;
 
-    background-color: #a5a5a5;
 }
 .categories .products .select{
     margin-bottom: 30px;
     height: 24px;
+    max-width: 100%;
     display: flex;
 
-    background-color: burlywood;
+
 }
+.select ul{
+    text-decoration: none;
+    list-style: none;
+    display: flex;
+    font-family: cera_probold, serif;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 107%;
+    color: #46a358;
+}
+
 .categories .products .cards{
     margin-bottom: 90px;
     min-height: 1190px;
+    max-width: 840px;
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 
 
-    background-color: burlywood;
 }
+.categories .products article{
+    padding: 24px 4px 20px 4px;
+    width: 260px;
+    height: 300px;
+}
+.products article img{
+    width: 250px;
+    height: 250px;
+    background: #fbfbfb;
+}
+.products article h4{
+    margin-top: 12px;
+    margin-bottom: 6px;
+    font-family: 'cera_proregular', serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 100%;
+    color: #3d3d3d;
+}
+.products article a{
+    display: inline-flex;
+    font-family: 'cera_probold', serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 89%;
+    color: #46a358;
+}
+.products article span{
+    display: inline-flex;
+    border: 1px solid #cbcbcb;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 89%;
+    color: #a5a5a5;
+}
+
 .categories .products .pages{
     height: 36px;
+    max-width: 840px;
     display: flex;
+    justify-content: flex-end;
 
 
-    background-color: burlywood;
+
+}
+.products .pages ul{
+    text-decoration: none;
+    list-style: none;
+    display: flex;
+}
+
+
+.find_more{
+    margin-bottom: 138px;
+    height: 302px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    background-color: #46a358;
+}
+
+.posts{
+    margin-bottom: 100px;
+    height: 448px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    background-color: #46a358;
+}
+
+footer .last{
+    margin-bottom: 14px;
+    height: 610px;
+    width: 100%;
+    display: flex;
+    background-color: #46a358;
 }
